--- a/webserver/template/common.html
+++ b/webserver/template/common.html
@@ -6,6 +6,7 @@
 	<link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 	<link rel='stylesheet' type='text/css' media='screen' href='/assets/style.css'>
 	<script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.8/dist/htmx.min.js" integrity="sha384-/TgkGk7p307TH7EXJDuUlgG3Ce1UVolAOFopFekQkkXihi5u/6OCvVKyz1W+idaz" crossorigin="anonymous"></script>
+	<script src="/assets/script.js"></script>
 </head>
 {{end}}
 
