--- a/webserver/template/account.html
+++ b/webserver/template/account.html
@@ -31,7 +31,7 @@
 		</tr>
 		<tr>
 			<th>Minecraft Name</th>
-			<td>{{ GetMCName .WhitelistEntry.UUID }}</td>
+			<td hx-get="/api/name/{{ .WhitelistEntry.UUID }}?force" hx-trigger="load">...</td>
 		</tr>
 	</table>
 	{{ if IsAdmin .WhitelistEntry }}{{template "admin" .}}{{ end}}
