--- a/webserver/template/account/whitelistEntry.html
+++ b/webserver/template/account/whitelistEntry.html
@@ -2,7 +2,7 @@
 <tr class="{{ if .IsAdmin }}admin{{ else }}{{ if .IsActive }}active{{ else }}inactive{{ end }}{{ end }}">
 	<td>{{ .ID }}.</td>
 	<td><span class="checkbox"></span></td>
-	<td>{{ GetMCName .UUID }}</td>
+	<td hx-get="/api/name/{{ .UUID }}" hx-trigger="load">...</td>
 	<td>{{ .Name }}</td>
 	<td>{{ .Nicknames }}</td>
 	<td>{{ if .Reference }}{{ .Reference.ID }}. {{ .Reference.Name }}{{ end }}</td>
