--- a/webserver/template/account.html
+++ b/webserver/template/account.html
@@ -15,6 +15,7 @@
 			<th>Email</th>
 			<td>{{ .Email }}</td>
 		</tr>
+		{{ if .WhitelistEntry }}
 		<tr>
 			<th>Name</th>
 			<td>{{ .WhitelistEntry.Name }}</td>
@@ -33,8 +34,14 @@
 			<th>Minecraft Name</th>
 			<td hx-get="/api/name/{{ .WhitelistEntry.UUID }}?force" hx-trigger="load">...</td>
 		</tr>
+		{{ else }}
+		<tr>
+			<th>Whitelist Entry</th>
+			<td>-None-</td>
+		</tr>
+		{{ end }}
 	</table>
-	{{ if IsAdmin .WhitelistEntry }}
+	{{ if and .WhitelistEntry (IsAdmin .WhitelistEntry) }}
 	<a class="likeabutton" href="/admin">Admin</a>
 	{{ end }}
 	
