--- a/webserver/html/style.css
+++ b/webserver/html/style.css
@@ -1,3 +1,14 @@
+body {
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
 a.likeabutton {
 	appearance: button;
 	-moz-appearance: button;
@@ -14,4 +25,23 @@ a.likeabutton {
 a.likeabutton:hover {
 	background-color: #aa8;
 	color: #f98;
+}
+
+div.map {
+	display: flex;
+	flex-direction: row;
+	width: 80vw;
+	height: 80vh;
+	border: 5px solid rgb(136, 0, 52);
+	border-radius: 20px;
+}
+
+div.map iframe {
+	flex-grow: 1;
+	padding: 0px;
+	margin: 0px;
+	border: none;
+	width: auto;
+	height: auto;
+	border-radius: 15px;
 }
